A bit of libraries cleanup

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
 NUXTPRESS_NUXT_DEBUG=
 NUXTPRESS_NUXT_LOG_LEVEL=debug
 
-NUXTPRESS_WP_URL=
-NUXTPRESS_FRONT_URL=
+NUXTPRESS_WP_URL=http://localhost/blog-api
+NUXTPRESS_WP_PORT=80
+NUXTPRESS_FRONT_URL=http://localhost:3000
