--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "axios": "^0.19.0",
     "intersection-observer": "^0.10.0",
     "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2",
     "nuxt-fontawesome": "^0.4.0",
     "opti-image": "^0.10.0",
     "url-parse": "^1.4.7",
     "vue-disqus": "^3.0.5",
-    "vuejs-logger": "^1.5.4",
     "wpapi": "^1.2.1"
   },
   "devDependencies": {
@@ -34,14 +32,13 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@vue/test-utils": "^1.1.0",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
     "core-js": "3",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "nuxt-responsive-loader": "^1.0.3",
-    "prettier": "^1.16.4",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
     "sharp": "^0.22.1"
